<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smooth System Progress Bars</string>

    <string-array name="interpolators">
        <item>Accelerate</item>
        <item>Linear</item>
        <item>AccelerateDecelerate</item>
        <item>Decelerate</item>
    </string-array>

    <string name="saturation">Saturation</string>
    <string name="value">Value</string>
    <string name="opacity">Opacity</string>
    <string name="preview">Preview</string>
    <string name="restore">Restore</string>
    <string name="save">Save</string>
    <string name="apply">Apply</string>
    <string name="invalid_color">Invalid color</string>
    
    <string name="item_successfully_saved">Items successfully saved!</string>
    <string name="scroll_down_hint">Scroll down the list to add more colors</string>
    <string name="reversed">Reversed</string>
    <string name="mirror_mode">Mirror mode</string>
    <string name="speed">Speed: %s</string>
    <string name="stroke_width">Stroke width: %ddp</string>
    <string name="separator_length">Separator length: %ddp</string>
    <string name="sections_count">Sections count: %s</string>
    <string name="interpolator">Interpolator:</string>
    <string name="xposed_description">Replaces ProgressBar with a smoother implementation</string>
    <string name="tap_to_add">Tap to add a color</string>
    <string name="hold_to_delete">Tap and hold to delete</string>

</resources>
