<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <com.mohammadag.smoothsystemprogressbars.SmoothProgressBar
            android:id="@+id/progressbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:indeterminate="true"
            android:indeterminateOnly="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/checkbox_reversed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reversed" />

            <CheckBox
                android:id="@+id/checkbox_mirror"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mirror_mode" />
        </LinearLayout>

        <TextView
            android:id="@+id/textview_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/speed" />

        <SeekBar
            android:id="@+id/seekbar_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="31" />

        <TextView
            android:id="@+id/textview_stroke_width"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stroke_width" />

        <SeekBar
            android:id="@+id/seekbar_stroke_width"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="12" />

        <TextView
            android:id="@+id/textview_separator_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/separator_length" />

        <SeekBar
            android:id="@+id/seekbar_separator_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="48" />

        <TextView
            android:id="@+id/textview_sections_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sections_count" />

        <SeekBar
            android:id="@+id/seekbar_sections_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="12" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interpolator" />

        <Spinner
            android:id="@+id/spinner_interpolator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scroll_down_hint" />

        <ListView
            android:id="@+id/colorListView"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:minHeight="120dp"
            android:fadeScrollbars="false" >
        </ListView>

    </LinearLayout>

</ScrollView>